feat: swap between 1 and 2 items in the electric compressor REI display